[gd_scene load_steps=3 format=2]

[ext_resource path="res://Levels/RecordPlayerPuzzle/LogicElement/Button/button.json" type="PackedScene" id=1]
[ext_resource path="res://Levels/RecordPlayerPuzzle/LogicElement/Button/ButtonPrefap.gd" type="Script" id=2]

[node name="ButtonPrefap" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
toggle_mode = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" parent="." instance=ExtResource( 1 )]
frame = 30
playing = false
centered = false
[connection signal="pressed" from="." to="." method="_on_ButtonPrefap_pressed"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
